<resources>
    <string name="app_name">kotlin-reference</string>

    <!--Activity Splash-->
    <string name="title_splash_text">Proyecto Demo En Kotlin\n Doapps</string>

    <!--Activity Login-->
    <string name="title_login_text">Demo Kotlin\n Doapps</string>
    <string name="user_login_hide">Usuario</string>
    <string name="password_login_hide">Contraseña</string>
    <string name="enter_login_button">Ingresar</string>

    <!--Activity Home-->
    <string name="select_category_text">Seleccione una categoría</string>
    <string name="register_user_button">Registrar Usuario</string>
    <string name="list_user_button">Lista de Usuarios</string>
    <string name="verify_list_button">Verificar Lista por internet</string>
    <string name="download_list_button">Descargar Lista</string>

    <!--Activity ListConnection-->
    <string name="user_id_list_connection_text">User Id :</string>
    <string name="id_list_connection_text">Id :</string>
    <string name="title_item_list_connection_text">Titulo :</string>

    <!--Message Alerts-->
    <string name="accept_text">Aceptar</string>

</resources>
